--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Do you love me?</title>
+    <title>Will you be my Valentine Sanchita??</title>
 </head>
 <body>
 
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
